--- a/config/app.yml
+++ b/config/app.yml
@@ -3,7 +3,7 @@ debug: true
 db:
   web:
     dialect: mysql
-    dsn: root:123456@tcp(127.0.0.1:3306)/lexicon?charset=utf8mb4&parseTime=True&loc=Local
+    dsn: root:123456@tcp(127.0.0.1:3306)/web?charset=utf8mb4&parseTime=True&loc=Local
 redis:
   clients:
     lexicon:
