--- a/config/app.yml
+++ b/config/app.yml
@@ -6,7 +6,7 @@ db:
     dsn: root:123456@tcp(127.0.0.1:3306)/web?charset=utf8mb4&parseTime=True&loc=Local
 redis:
   clients:
-    lexicon:
+    web:
       addrs:
         - 127.0.0.1:6379
       db: 0
