--- a/config/app.yml
+++ b/config/app.yml
@@ -27,6 +27,12 @@ elasticsearch:
       - http://127.0.0.1:9200
     username: admin
     password: 123456
+rabbitmq:
+  engine:
+    addresses: localhost:5672/
+    username: myuser
+    password: mypass
+    queue-name: ddd
 wechat:
   appid: "wx2afb8412b1111"
   secret: "82c2222d4e09230a06f8132b04577"
