--- a/config/app.yml
+++ b/config/app.yml
@@ -7,6 +7,9 @@ db:
   market:
     dialect: mysql
     dsn: root:123456@tcp(127.0.0.1:3306)/market-api?charset=utf8mb4&parseTime=True&loc=Local
+  student:
+    dialect: mysql
+    dsn: root:123456@tcp(127.0.0.1:3306)/student?charset=utf8mb4&parseTime=True&loc=Local
 redis:
   clients:
     web:
